  - NEW: add random parent chooser without replacement and/or with alpha individuals,
		haplodiploidOffspringGenerator, monogamousMating, polygamousMating, alphaMating,
		and haplodiploidMating mating schemes.
  - NEW: add haplodiploid option to GenoStructure. Recombinator now handles such
		populations correctly.
  - CHG: make the subPop parameter of population() function obsolete.

version 0.8.4 - (Rev 1456) Mar 8, 2008
  - NEW: add support for other posix systems like HP-UX
  - NEW: automatically download HapMap data in loadHapMap.py and simuAdmixture.py.
  - NEW: add two operators infoEval and infoExec that can be used to manipulate
	information fields during evolution.
  - NEW: operator stator popSize=True also calculates virtual subpop size using
		variable virtualPopSize.
  - BUG: fix a bug in the re-initialization of pyParentsChooser.
  - CHG: inheritTagger will inherit the first, instead of the second, information
		field from mother in TAG_Maternal mode.
  - CHG: population::numVirtualSubPop() returns 0 instead 1 when there is no
		virtual subpopulation.
  - NEW: allow multiple genotype in the same virtual subpopulation split by
		genotypeSplitter
  - NEW: add combinedSplitter


version 0.8.3 - (Rev 1412) Jan 17, 2008 
  - NEW: allow taggers to write pedigree files
  - NEW: introduce pedigreeParentsChooser to choose parents according to a given pedigree
  - NEW: introduce pedigreeMating to mate according to a given pedigree
  - NEW: add infoTagger, sexTagger, affectionTagger
  - NEW: add pedigree information handling functions
  - CHG: add more options to functions in hapMapUtil.py
  - CHG: remove MPI related setup, build and source code (revert to r1393 to retrieve the
		MPI related code).
  - BUG: Fix a bug of setting individual visibility of populations loaded from disk file.
  - NEW: improve the efficiency of MergePopulations and MergePopulationsByLoci when
		a lot of populaitons are involved.

version 0.8.2 - (Rev 1370) Nov 19, 2007