@@ -227,7 +227,7 @@ void simulator::setGroup(const vectori & grp)
 bool simulator::evolve(const vectorop & ops,
                        const vectorop & preOps,
                        const vectorop & postOps,
-                       int end, bool dryrun)
+                       int end, int steps, bool dryrun)
 {
 	// it is possible that a user changes the internal population's
 	// genotype strucutre. It is therefore necessary to check if
@@ -249,6 +249,19 @@ bool simulator::evolve(const vectorop & ops,
 
 	DBG_DO(DBG_SIMULATOR, cout << "Starting generation: " << gen()
 		                       << " with ending generation " << end << endl);
+
+	DBG_FAILIF(end >= 0 && steps >=0, ValueError,
+		"Please specify only one of parameters end or gen");
+
+	DBG_DO(DBG_GENERAL, if (steps == -1 && end != -1)
+		cout << "Parameter end is obsolete in simulator::evolve(), please use gen instead");
+
+	// does not evolve.
+	if (steps == 0)
+		return true;
+		
+	if (steps > 0)
+		end = gen() + steps - 1;
 
 	DBG_FAILIF(end > 0 && gen() > static_cast<UINT>(end), ValueError,
 		"population gen is already greater than ending generation.");
